https://github.com/ffazil/phtl-weather-api/issues/7

--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -3,4 +3,7 @@ spring:
 ---
 owm:
   appid: 659c58547457aff55894e298a3f85ac3
-  url: http://api.openweathermap.org/data/2.5/weather?lat={lat}&lon={lon}&appid={appid}
+  weather:
+    url: http://api.openweathermap.org/data/2.5/weather?lat={lat}&lon={lon}&appid={appid}&units=imperial
+  forecast:
+    url: http://api.openweathermap.org/data/2.5/forecast?lat={lat}&lon={lon}&appid={appid}&units=imperial
