--- a/src/main/resources/application-ec2.yml
+++ b/src/main/resources/application-ec2.yml
@@ -16,3 +16,5 @@ owm:
     url: http://api.openweathermap.org/data/2.5/weather?lat={lat}&lon={lon}&appid={appid}&units=imperial
   forecast:
     url: http://api.openweathermap.org/data/2.5/forecast?lat={lat}&lon={lon}&appid={appid}&units=imperial
+  daily:
+    url: http://api.openweathermap.org/data/2.5/forecast/daily?lat={lat}&lon={lon}&appid={appid}&units=imperial&cnt=2
