--- a/pom.xml
+++ b/pom.xml
@@ -64,6 +64,34 @@
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
             </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-antrun-plugin</artifactId>
+                <version>1.6</version>
+                <executions>
+                    <execution>
+                        <id>prepare</id>
+                        <phase>package</phase>
+                        <configuration>
+                            <tasks>
+                                <copy todir="${project.build.directory}/${project.build.finalName}-deploy"
+                                      overwrite="false">
+                                    <fileset dir="./" includes=".ebextensions/**"/>
+                                    <fileset dir="./" includes="Procfile"/>
+                                    <fileset dir="${project.build.directory}"
+                                             includes="${project.build.finalName}.jar"/>
+                                </copy>
+                                <zip compress="false"
+                                     destfile="${project.build.directory}/${project.build.finalName}-deploy.zip"
+                                     basedir="${project.build.directory}/${project.build.finalName}-deploy/"/>
+                            </tasks>
+                        </configuration>
+                        <goals>
+                            <goal>run</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
         </plugins>
     </build>
 
